--- a/Web/GreenCap.Web/Views/Shared/_LoginPartial.cshtml
+++ b/Web/GreenCap.Web/Views/Shared/_LoginPartial.cshtml
@@ -6,14 +6,24 @@
 
 <ul class="navbar-nav">
     @if (this.SignInManager.IsSignedIn(this.User))
-    {
-    <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage"><i class="fas fa-user-tie"></i>&nbsp;Profile</a> <!--(this.User.Identity.Name)-->
-    </li>
+    {        
         if (this.User.IsInRole(GlobalConstants.AdministratorRoleName))
         {
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" asp-area="Identity" asp-page="/Account/Manage/Index" role="button" aria-haspopup="true" aria-expanded="false"><i class="fas fa-user-tie"></i>&nbsp;Profile(A)</a>
+                <div class="dropdown-menu">
+                    <a class="dropdown-item" asp-area="Administration" asp-controller="Posts" asp-action="Index"><i class="fas fa-layer-group"></i>&ensp; Posts</a>
+                    <a class="dropdown-item" asp-area="Administration" asp-controller="Events" asp-action="Index"><i class="fas fa-layer-group"></i>&ensp; Events</a>
+                    <a class="dropdown-item" asp-area="Administration" asp-controller="Proposals" asp-action="Index"><i class="fas fa-layer-group"></i>&ensp; Proposals</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" asp-area="Administration" asp-controller="Dashboard" asp-action="Index"><i class="fas fa-chart-line"></i>&ensp; Dashboard</a>
+                </div>
+            </li>
+        }
+        else
+        {
             <li class="nav-item">
-                <a class="nav-link text-dark" asp-area="Administration" asp-controller="Dashboard" asp-action="Index" title="Admin">Admin</a>
+                 <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage"><i class="fas fa-user-tie"></i>&nbsp;Profile</a> <!--(this.User.Identity.Name)-->
             </li>
         }
         <li class="nav-item">
