--- a/Web/GreenCap.Web/Views/Shared/_Layout.cshtml
+++ b/Web/GreenCap.Web/Views/Shared/_Layout.cshtml
@@ -1,4 +1,8 @@
 ﻿@using GreenCap.Common
+@using GreenCap.Data.Models
+@using Microsoft.AspNetCore.Identity
+@inject SignInManager<ApplicationUser> SignInManager
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -13,70 +17,88 @@
 </head>
 <body>
     <header>
-          <nav class="navbar navbar-expand-lg navbar-dark bg-secondary border-bottom box-shadow mb-6">                                                     
-              <div class="container">                                                                                                                      
-                  <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><i class="fas fa-home"></i> @GlobalConstants.SystemName</a>                             
-                  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                          aria-expanded="false" aria-label="Toggle navigation">                                                                            
-                      <span class="navbar-toggler-icon"></span>                                                                                            
-                  </button>                                                                                                                                
-                  <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">                                                              
-                      <partial name="_LoginPartial" />                                                                                                     
-                      <ul class="navbar-nav flex-grow-1">
-                          <!-- <li class="nav-item">-->
-                          <!--<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index"><i class="fas fa-home"></i>&nbsp;Home</a>-->
-                          <!--</li>-->
-                          <li class="nav-item dropdown">
-                              <a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" asp-area="" asp-controller="Proposals" asp-action="All" role="button" aria-haspopup="true" aria-expanded="false"><i class="far fa-lightbulb"></i>&nbsp;Proposals</a>
-                              <div class="dropdown-menu">
-                                  <a class="dropdown-item" asp-area="" asp-controller="Proposals" asp-action="All"><i class="fas fa-globe"></i>&ensp; View all</a>
-                                  <a class="dropdown-item" asp-area="" asp-controller="Proposals" asp-action="Create"><i class="fas fa-plus"></i>&ensp; Create new proposal</a>
-                                  <div class="dropdown-divider"></div>
-                                  <a class="dropdown-item" asp-controller="Proposals" asp-action="Personal"><i class="fas fa-user"></i>&ensp; Personal proposals</a>
-                              </div>
-                          </li>
-                          <li class="nav-item dropdown">
-                              <a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" asp-area="" asp-controller="Forum" asp-action="Categories" role="button" aria-haspopup="true" aria-expanded="false">Forum</a>
-                              <div class="dropdown-menu">
-                                  <a class="dropdown-item" asp-area="" asp-controller="Forum" asp-action="Latest"><i class="far fa-clock"></i>&ensp; Latest</a>
-                                  <a class="dropdown-item" asp-area="" asp-controller="Forum" asp-action="Categories"><i class="fas fa-layer-group"></i>&ensp; Categories</a>
-                                  <a class="dropdown-item" asp-area="" asp-controller="Forum" asp-action="Create"><i class="fas fa-plus"></i>&ensp; Create new post</a>
-                                  <div class="dropdown-divider"></div>
-                                  <a class="dropdown-item" asp-controller="Forum" asp-action="Personal"><i class="fas fa-user"></i>&ensp; Personal posts</a>
-                              </div>
-                          </li>
-                          <li class="nav-item dropdown">
-                              <a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" asp-area="" asp-controller="Events" asp-action="All" role="button" aria-haspopup="true" aria-expanded="false">Events</a>
-                              <div class="dropdown-menu">
-                                  <a class="dropdown-item" asp-area="" asp-controller="Events" asp-action="All"><i class="fas fa-globe"></i>&ensp; View all</a>
-                                  <a class="dropdown-item" asp-area="" asp-controller="Events" asp-action="Create"><i class="fas fa-plus"></i>&ensp; Create new event</a>
-                                  <div class="dropdown-divider"></div>
-                                  <a class="dropdown-item" href="#"><i class="far fa-calendar-check"></i>&ensp; Donate</a>
-                              </div>
-                          </li>
-                          <li class="nav-item">
-                              <a class="nav-link text-dark" asp-area="" asp-controller="News" asp-action="All"><i class="far fa-newspaper"></i>&nbsp;News</a>
-                          </li>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-secondary border-bottom box-shadow mb-6">
+            <div class="container">
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><i class="fas fa-home"></i> @GlobalConstants.SystemName</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
+                    <partial name="_LoginPartial" />
+                    <ul class="navbar-nav flex-grow-1">
 
-                          <!--<li class="nav-item">-->
-                          <!--<a class="nav-link text-dark" asp-area="" asp-controller="Settings" asp-action="Index">Settings</a>-->
-                          <!--</li>-->
-                          <!--<li class="nav-item">-->
-                          <!--<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>-->
-                          <!--</li>-->
-                      </ul>                                                                                                                                
-                  </div>                                                                                                                                   
-              </div>                                                                                                                                       
-          </nav>                                                                                                                                           
+                         <!--Proposals-->
+                         @if (this.SignInManager.IsSignedIn(this.User))
+                         {
+                              <li class="nav-item dropdown">
+                                  <a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" asp-area="" asp-controller="Proposals" asp-action="All" role="button" aria-haspopup="true" aria-expanded="false"><i class="far fa-lightbulb"></i>&nbsp;Proposals</a>
+                                  <div class="dropdown-menu">
+                                      <a class="dropdown-item" asp-area="" asp-controller="Proposals" asp-action="All"><i class="fas fa-globe"></i>&ensp; View all</a>
+                                      <a class="dropdown-item" asp-area="" asp-controller="Proposals" asp-action="Create"><i class="fas fa-plus"></i>&ensp; Create new proposal</a>
+                                      <div class="dropdown-divider"></div>
+                                      <a class="dropdown-item" asp-controller="Proposals" asp-action="Personal"><i class="fas fa-user"></i>&ensp; Personal proposals</a>
+                                  </div>
+                              </li> }
+                         else
+                         {
+                             <li class="nav-item">
+                                 <a class="nav-link text-dark" asp-area="" asp-controller="Proposals" asp-action="All"><i class="far fa-lightbulb"></i>&nbsp;Proposals</a>
+                             </li>
+                         }
+
+                         <!--Forum-->
+                         @if (this.SignInManager.IsSignedIn(this.User))
+                         {
+                             <li class="nav-item dropdown">
+                                 <a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" asp-area="" asp-controller="Forum" asp-action="Categories" role="button" aria-haspopup="true" aria-expanded="false">Forum</a>
+                                 <div class="dropdown-menu">
+                                     <a class="dropdown-item" asp-area="" asp-controller="Forum" asp-action="Latest"><i class="far fa-clock"></i>&ensp; Latest</a>
+                                     <a class="dropdown-item" asp-area="" asp-controller="Forum" asp-action="Categories"><i class="fas fa-layer-group"></i>&ensp; Categories</a>
+                                     <a class="dropdown-item" asp-area="" asp-controller="Forum" asp-action="Create"><i class="fas fa-plus"></i>&ensp; Create new post</a>
+                                     <div class="dropdown-divider"></div>
+                                     <a class="dropdown-item" asp-controller="Forum" asp-action="Personal"><i class="fas fa-user"></i>&ensp; Personal posts</a>
+                                 </div>
+                             </li>
+                         }
+
+                        <!--Events-->
+                        @if (this.SignInManager.IsSignedIn(this.User))
+                        {
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" asp-area="" asp-controller="Events" asp-action="All" role="button" aria-haspopup="true" aria-expanded="false">Events</a>
+                                <div class="dropdown-menu">
+                                    <a class="dropdown-item" asp-area="" asp-controller="Events" asp-action="All"><i class="fas fa-globe"></i>&ensp; View all</a>
+                                    <a class="dropdown-item" asp-area="" asp-controller="Events" asp-action="Create"><i class="fas fa-plus"></i>&ensp; Create new event</a>
+                                    <div class="dropdown-divider"></div>
+                                    <a class="dropdown-item" href="#"><i class="far fa-calendar-check"></i>&ensp; Donate</a>
+                                </div>
+                            </li>                            
+                        }else
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Events" asp-action="All">Events</a>
+                            </li>
+                        }
+
+                        <!--News-->
+                        <li class="nav-item">
+                             <a class="nav-link text-dark" asp-area="" asp-controller="News" asp-action="All"><i class="far fa-newspaper"></i>&nbsp;News</a>
+                        </li>
+                       
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </header>
-    
+
     <div class="container">
         <partial name="_CookieConsentPartial" />
         <main role="main" class="pb-3">
             @this.RenderBody()
         </main>
     </div>
-    
+
     <footer class="border-top footer text-muted">
         <div class="container">
             &copy; @DateTime.Now.Year - @GlobalConstants.SystemName - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
