--- a/Web/GreenCap.Web/Views/Shared/_LoginPartial.cshtml
+++ b/Web/GreenCap.Web/Views/Shared/_LoginPartial.cshtml
@@ -15,6 +15,7 @@
                     <a class="dropdown-item" asp-area="Administration" asp-controller="Posts" asp-action="Index"><i class="fas fa-layer-group"></i>&ensp; Posts</a>
                     <a class="dropdown-item" asp-area="Administration" asp-controller="Events" asp-action="Index"><i class="fas fa-layer-group"></i>&ensp; Events</a>
                     <a class="dropdown-item" asp-area="Administration" asp-controller="Proposals" asp-action="Index"><i class="fas fa-layer-group"></i>&ensp; Proposals</a>
+                    <a class="dropdown-item" asp-area="Administration" asp-controller="News" asp-action="Index"><i class="fas fa-layer-group"></i>&ensp; News</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" asp-area="Administration" asp-controller="Dashboard" asp-action="Index"><i class="fas fa-chart-line"></i>&ensp; Dashboard</a>
                 </div>
