edit page for users, edit page for proposal and posts

--- a/Web/GreenCap.Web/Views/Home/Index.cshtml
+++ b/Web/GreenCap.Web/Views/Home/Index.cshtml
@@ -47,7 +47,7 @@
     <hr class="my-4">
     @if (this.SignInManager.IsSignedIn(this.User))
     {
-        <p class="text-muted">Share your creative idea <a asp-controller="Proposals" asp-action="Create">here</a>, create new post in the <a asp-controller="Forum" asp-action="Create">forum</a> or join upcoming <a asp-controller="Events" asp-action="All">event</a>! <br />It's up to you!</p>
+        <p class="text-muted">Share your creative idea <a asp-controller="Proposals" asp-action="Create">here</a>, create new post in the <a asp-controller="Forum" asp-action="Create">forum</a> or join upcoming <a asp-controller="Events" asp-action="All">events</a>! <br />It's up to you!</p>
     }
     else
     {
