--- a/Web/GreenCap.Web/Views/Proposals/Details.cshtml
+++ b/Web/GreenCap.Web/Views/Proposals/Details.cshtml
@@ -12,59 +12,57 @@
         <ol class="carousel-indicators">
             @for (int i = 0; i < Model.Images.Count; i++)
             {
-                <li data-target="#carousel-example-2" data-slide-to="@i" class="active"></li>
-            }
-            
+<li data-target="#carousel-example-2" data-slide-to="@i" class="active"></li>}
+
         </ol>
         <!--/.Indicators-->
         <!--Slides-->
         <div class="carousel-inner" role="listbox">
             @if (Model.Images.Count >= 1)
             {
-    <div class="carousel-item active">
-        <div class="view">
-            <img class="rounded mx-auto d-block" src="@Model.Images[0]"
-                 alt="First slide">
-            <div class="mask rgba-black-light"></div>
-        </div>
-    </div>}
+<div class="carousel-item active">
+    <div class="view">
+        <img class="rounded mx-auto d-block" src="@Model.Images[0]"
+             alt="First slide">
+        <div class="mask rgba-black-light"></div>
+    </div>
+</div>}
 
             @if (Model.Images.Count >= 2)
             {
-    <div class="carousel-item">
-        <!--Mask color-->
-        <div class="view">
-            <img class="rounded mx-auto d-block" src="@Model.Images[1]"
-                 alt="Second slide">
-            <div class="mask rgba-black-strong"></div>
-        </div>
-    </div>}
+<div class="carousel-item">
+    <!--Mask color-->
+    <div class="view">
+        <img class="rounded mx-auto d-block" src="@Model.Images[1]"
+             alt="Second slide">
+        <div class="mask rgba-black-strong"></div>
+    </div>
+</div>}
 
             @if (Model.Images.Count >= 3)
             {
-    <div class="carousel-item">
-        <!--Mask color-->
-        <div class="view">
-            <img class="rounded mx-auto d-block" src="@Model.Images[2]"
-                 alt="Third slide">
-            <div class="mask rgba-black-slight"></div>
-        </div>
-    </div>            }
+<div class="carousel-item">
+    <!--Mask color-->
+    <div class="view">
+        <img class="rounded mx-auto d-block" src="@Model.Images[2]"
+             alt="Third slide">
+        <div class="mask rgba-black-slight"></div>
+    </div>
+</div>      }
 
         </div>
         <!--/.Slides-->
         <!--Controls-->
         @if (Model.Images.Count > 1)
         {
-            <a class="carousel-control-prev" href="#carousel-example-2" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carousel-example-2" role="button" data-slide="next">
-               <span class="carousel-control-next-icon" aria-hidden="true"></span>
-               <span class="sr-only">Next</span>
-            </a>
-         }
+<a class="carousel-control-prev" href="#carousel-example-2" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+</a>
+                <a class="carousel-control-next" href="#carousel-example-2" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>}
 
         <!--/.Controls-->
     </div>
@@ -91,15 +89,19 @@
     <p class="lead">Last modified on: @Model.ModifiedOn</p>
     <hr class="my-4">
     <p class="card-body">@Model.Description</p>
-    @if (Model.UserEmail == this.User.Identity.Name)
-    {
-<p class="lead">
-    <a class="btn btn-secondary btn-lg" href="/Proposals/Edit?id=@Model.Id" role="button">Edit</a>
-    <a class="btn btn-danger btn-lg" href="/Proposals/Delete?id=@Model.Id" role="button">Delete</a>
-</p>}
-</div>
+
+    <p class="lead">
+        <a class="btn btn-info btn-lg" asp-action="ALL">Back to List</a>
+        @if (Model.UserEmail == this.User.Identity.Name)
+        {
+            <a class="btn btn-secondary btn-lg" href="/Proposals/Edit?id=@Model.Id" role="button">Edit</a>
+            <a class="btn btn-danger btn-lg" href="/Proposals/Delete?id=@Model.Id" role="button">Delete</a>
+        }
+    </p>
+    </div>
 
 <form method="post" id="antiForgeryForm"></form>
+
 
 @section Scripts
 {
