--- a/Web/GreenCap.Web/Areas/Administration/Views/Posts/Edit.cshtml
+++ b/Web/GreenCap.Web/Areas/Administration/Views/Posts/Edit.cshtml
@@ -8,7 +8,7 @@
     <h1 class="text-center display-3">@ViewData["Title"]</h1>
 </div>
 
-<div class="container bg-gradient-dark text-success">
+<div class="container bg-gradient-info text-dark">
     <div class="row">
         <div class="col-md-4">
             <form asp-action="Edit">
@@ -55,14 +55,14 @@
                     <span asp-validation-for="ModifiedOn" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <input type="submit" value="Save" class="btn btn-primary" />
+                    <input type="submit" value="Save" class="btn btn-dark" />
                 </div>
             </form>
         </div>
     </div>
     </div>
 
-<a class="btn btn-info btn-lg" asp-action="Index">Back to List</a>
+<a class="btn btn-info btn-lg m-2" asp-action="Index">Back to List</a>
 
     @section Scripts {
         @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
