--- a/Web/GreenCap.Web/Areas/Administration/Views/Proposals/Details.cshtml
+++ b/Web/GreenCap.Web/Areas/Administration/Views/Proposals/Details.cshtml
@@ -8,7 +8,7 @@
     <h1 class="text-center display-3">@ViewData["Title"]</h1>
 </div>
 
-<div class="container bg-gradient-dark text-success">
+<div class="container bg-gradient-info text-dark">
     <dl class="row">
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Title)
