--- a/Web/GreenCap.Web/Views/Home/Index.cshtml
+++ b/Web/GreenCap.Web/Views/Home/Index.cshtml
@@ -13,6 +13,13 @@
     <link rel="stylesheet" href="~/css/HighCharts.css" />
 }
 
+@inject Microsoft.AspNetCore.Hosting.IWebHostEnvironment envirment
+@inject Microsoft.Extensions.Configuration.IConfiguration configuaration
+
+<!--<h1>@Environment.OSVersion</h1>                                       -->  
+<!--<h1>@envirment.EnvironmentName</h1>                                   -->
+<!--<h1>@configuaration["ConnectionStrings:DefaultConnection"]</h1>       -->
+
 
 <div class="jumbotron">
     <h1 class="display-3">Welcome to @GlobalConstants.SystemName!</h1>
