--- a/Web/GreenCap.Web/Views/Shared/_LoginPartial.cshtml
+++ b/Web/GreenCap.Web/Views/Shared/_LoginPartial.cshtml
@@ -18,6 +18,7 @@
                     <a class="dropdown-item" asp-area="Administration" asp-controller="News" asp-action="Index"><i class="fas fa-layer-group"></i>&ensp; News</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" asp-area="Administration" asp-controller="Dashboard" asp-action="Index"><i class="fas fa-chart-line"></i>&ensp; Dashboard</a>
+                    <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage"><i class="fas fa-user-tie"></i>&nbsp;&ensp;Profile</a>
                 </div>
             </li>
         }
